--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,6 @@
+---
+---
+
 // ============================================
 // SCSS VARIABLES - Define all colors and sizes once here
 // ============================================
